docs/api/qiskit/0.19/qiskit.qobj.Qobj.mdx
---
title: Qobj (v0.19)
description: API reference for qiskit.qobj.Qobj in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.Qobj
---

# Qobj

<Class id="qiskit.qobj.Qobj" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/qobj/__init__.py" signature="Qobj(qobj_id=None, config=None, experiments=None, header=None)" modifiers="class">
  A backwards compat alias for QasmQobj.

  Initialize a Qobj object.

  ## Methods

  <span id="qobj-from-dict" />

  ### from\_dict

  <Function id="qiskit.qobj.Qobj.from_dict" signature="Qobj.from_dict(data)" modifiers="classmethod">
    Create a new QASMQobj object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary representing the QasmQobj to create. It will be in the same format as output by [`to_dict()`](qiskit.qobj.Qobj#to_dict "qiskit.qobj.Qobj.to_dict").

    **Returns**

    The QasmQobj from the input dictionary.

    **Return type**

    [QasmQobj](qiskit.qobj.QasmQobj "qiskit.qobj.QasmQobj")
  </Function>

  <span id="qobj-to-dict" />

  ### to\_dict

  <Function id="qiskit.qobj.Qobj.to_dict" signature="Qobj.to_dict(validate=False)">
    Return a dictionary format representation of the QASM Qobj.

    Note this dict is not in the json wire format expected by IBMQ and qobj specification because complex numbers are still of type complex. Also this may contain native numpy arrays. When serializing this output for use with IBMQ you can leverage a json encoder that converts these as expected. For example:

    ```python
    import json
    import numpy

    class QobjEncoder(json.JSONEncoder):
        def default(self, obj):
            if isinstance(obj, numpy.ndarray):
                return obj.tolist()
            if isinstance(obj, complex):
                return (obj.real, obj.imag)
            return json.JSONEncoder.default(self, obj)

    json.dumps(qobj.to_dict(), cls=QobjEncoder)
    ```

    **Parameters**

    **validate** (*bool*) – When set to true validate the output dictionary against the jsonschema for qobj spec.

    **Returns**

    A dictionary representation of the QasmQobj object

    **Return type**

    dict
  </Function>
</Class>

